--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webjs",
-  "version": "0.2.6",
+  "version": "0.2.7",
   "description": "A HTTP and TCP framework like Webpy for NodeJS.",
   "homepage": "http://github.com/iwillwen/Web.js",
   "keywords": [
@@ -9,7 +9,7 @@
     "framework",
     "simple"
   ],
-  "author": "Will Wen Gunn <i@iwillwen.com> (http://www.iwillwen.com)",
+  "author": "Will Wen Gunn <willwengunn@gmail.com> (http://www.iwillwen.com)",
   "repository": {
     "type": "git",
     "url": "git://github.com/iwillwen/Web.js.git"
